k8s/payment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: luxora
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
        - name: payment-service
          image: 814383264015.dkr.ecr.ap-south-1.amazonaws.com/luxora-payment-service:latest

          ports:
            - containerPort: 7000

          readinessProbe:
            httpGet:
              path: /
              port: 7000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /
              port: 7000
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3

          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "128Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: luxora
spec:
  selector:
    app: payment-service
  ports:
    - protocol: TCP
      port: 7000
      targetPort: 7000
  type: ClusterIP
