k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: luxora-ingress
  namespace: luxora
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /products
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 8000

          # Frontend Cart page
          - path: /cart
            pathType: Exact
            backend:
              service:
                name: frontend
                port:
                  number: 3000

          # Cart API
          - path: /cart/
            pathType: Prefix
            backend:
              service:
                name: cart-service
                port:
                  number: 5000

          # Frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
